--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,12 @@
-<html>
-    <head>
-        <title> Nissa's Coding Journey</title>
-    </head>
-<body>
-    <div>
-        <h1><a href=""> Nissa's Coding Journey</a></h1>
+{% extends "blog/base.html" %}
+{% block content %}
+{% for post in posts %}
+    <div class="post">
+        <div class="date">
+            {{ post.published_date }}
+        </div>""
+        <h1><a href="{% url 'post_detail' pk=post.pk %}"> {{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaks }}</p>
     </div>
-    <div> <p> Published: 8.8.2015 </p> </div>
+{% endfor %}
+{% endblock content %}
